--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
     <title>Pebble App Settings</title>
 </head>
 <body>
-    <div>Distance</div>
-    <input id="distance" type="number" step="any" />
+    <div>API Key</div>
+    <input id="apiKey" type="text" step="any" />
+    <br />
+
+    <div>Search Radius</div>
+    <input id="radius" type="number" step="any" />
     <br />
     <button id="save">Save</button>
     <script>
+        var curOpts = location.href.split('?')[1];
+        if (curOpts.length) {
+            curOpts = curOpts.split('&');
+            for (var i = 0; i < curOpts.length; i++) {
+                var option = curOpts[i].split('=');
+                document.getElementById(option[0]).value = option[1];
+            }
+        }
         document.getElementById('save').addEventListener('click', function(e) {
-            var dist = Math.round(document.getElementById('distance').value * 1609.344);
+            var radius = Math.round(document.getElementById('radius').value * 1609.344);
+            var apiKey = document.getElementById('apiKey').value;
             var options = {
-                distance: dist,
+                radius: radius,
+                apiKey: apiKey,
             };
             document.location = 'pebblejs://close#' + encodeURIComponent(JSON.stringify(options));
         });
