--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <br />
 
     <div>Search Radius</div>
-    <input id="radius" type="number" step="any" pattern="[\d]*" />
+    <input id="radius" type="tel" step="any" />
     <br />
     <button id="save">Save</button>
     <script>
