--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 radius: radius,
                 apiKey: apiKey,
             };
-            document.location = 'pebblejs://close#' + encodeURIComponent(JSON.stringify(options));
+            document.location.href = 'pebblejs://close#' + encodeURIComponent(JSON.stringify(options));
         });
     </script>
 </body>
